@@ -14,19 +14,19 @@
 		<form name='vboxVMMModifyForm' style='width:100%;'>
 			<table class='vboxOptions'>
 				<tr style='vertical-align: top;'>
-					<td><input type='radio' class='vboxRadio' checked='checked' name='vmmMType' value='Normal' /> <span>Normal</span></td>
+					<td><input type='radio' class='vboxRadio' name='vmmMType' value='Normal' id='vbRadioNormal'/> <label for='vbRadioNormal'><span class='translate'>Normal</span></label></td>
 				</tr>
 				<tr style='vertical-align: top;'>
-					<td><input type='radio' class='vboxRadio' checked='checked' name='vmmMType' value='Immutable' /> <span>Immutable</span></td>
+					<td><input type='radio' class='vboxRadio' name='vmmMType' value='Immutable' id='vbRadioImmutable'/> <label for='vbRadioImmutable'><span class='translate'>Immutable</span></label></td>
 				</tr>
 				<tr style='vertical-align: top;'>
-					<td><input type='radio' class='vboxRadio' checked='checked' name='vmmMType' value='Writethrough' /> <span>Writethrough</span></td>
+					<td><input type='radio' class='vboxRadio' name='vmmMType' value='Writethrough' id='vbRadioWritethrough'/> <label for='vbRadioWritethrough'><span  class='translate'>Writethrough</span></label></td>
 				</tr>
 				<tr style='vertical-align: top;'>
-					<td><input type='radio' class='vboxRadio' checked='checked' name='vmmMType' value='Shareable' /> <span>Shareable</span></td>
+					<td><input type='radio' class='vboxRadio' name='vmmMType' value='Shareable' id='vbRadioShareable'/> <label for='vbRadioShareable'><span class='translate'>Shareable</span></label></td>
 				</tr>
 				<tr style='vertical-align: top;'>
-					<td><input type='radio' class='vboxRadio' checked='checked' name='vmmMType' value='Multi-attach' /> <span>Multi-attach</span></td>
+					<td><input type='radio' class='vboxRadio' name='vmmMType' value='MultiAttach' id='vbRadioMultiAttach'/> <label for='vbRadioMultiAttach'><span class='translate'>Multi-attach</span></label></td>
 				</tr>
 			</table>
 		</form>
